fix: header overlap

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -12,6 +12,7 @@
   height:40px;
   width:100%;
   background-color: #111111;
+  z-index: 2;
 }
 
 .languageSelect {
